--- a/api/config/database.yml
+++ b/api/config/database.yml
@@ -29,7 +29,7 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  username: postgres
+  username: <%= ENV.fetch("DB_USER") { "postgres" } %>
 
   # The password associated with the postgres role (username).
   password: postgres
@@ -58,7 +58,7 @@ development:
 test:
   <<: *default
   database: issue_tracker_test
-  username: postgres
+  username: <%= ENV.fetch("DB_USER") { "postgres" } %>
   password: postgres
   host: localhost
 
