refactor: rename board column item to board item

--- a/api/test/fixtures/projects/board_items.yml
+++ b/api/test/fixtures/projects/board_items.yml
@@ -2,9 +2,11 @@
 
 tylers_one_todo_1:
   user_creator: tyler
+  board: tylers_one
   column: tylers_one_todo
   issue: tylers_two
 tylers_one_in_progress_1:
   user_creator: tyler
+  board: tylers_one
   column: tylers_one_in_progress
   issue: tylers_one
