--- a/api/.rubocop_todo.yml
+++ b/api/.rubocop_todo.yml
@@ -25,6 +25,10 @@ Metrics/ClassLength:
 Metrics/MethodLength:
   Max: 16
 
+Metrics/AbcSize:
+  Exclude:
+    - 'app/graphql/mutations/create_issue.rb'
+
 # Offense count: 39
 Style/Documentation:
   Enabled: false
