feat: move board item mutation

--- a/api/test/fixtures/projects/board_items.yml
+++ b/api/test/fixtures/projects/board_items.yml
@@ -5,8 +5,10 @@ tylers_one_todo_1:
   board: tylers_one
   column: tylers_one_todo
   issue: tylers_two
+  column_order: 100
 tylers_one_in_progress_1:
   user_creator: tyler
   board: tylers_one
   column: tylers_one_in_progress
   issue: tylers_one
+  column_order: 100
