--- a/api/Gemfile
+++ b/api/Gemfile
@@ -1,5 +1,5 @@
 source 'https://rubygems.org'
-git_source(:github) { |repo| "https://github.com/#{repo}.git" }
+git_source(:github) { |_repo| "https://github.com/#{repo}.git" }
 
 ruby '2.7.1'
 
@@ -28,6 +28,7 @@ gem 'rack-cors'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: %i[mri mingw x64_mingw]
+  gem 'dotenv-rails'
   gem 'rubocop', '~> 0.89.1', require: false
 end
 
@@ -41,3 +42,6 @@ gem 'graphql'
 gem 'graphql-playground'
 
 gem 'ranked-model'
+
+gem 'argon2', '~> 2.0'
+gem 'jwt', '~> 2.2'
