feat: add remove member mutation

--- a/api/.rubocop_todo.yml
+++ b/api/.rubocop_todo.yml
@@ -24,6 +24,12 @@ Metrics/ClassLength:
 # Configuration parameters: CountComments, CountAsOne, ExcludedMethods.
 Metrics/MethodLength:
   Max: 16
+  Exclude:
+    - 'app/graphql/mutations/create_issue.rb'
+
+Metrics/AbcSize:
+  Exclude:
+    - 'app/graphql/mutations/create_issue.rb'
 
 # Offense count: 39
 Style/Documentation:
