--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/apollo-composable": "^4.0.0-alpha.10",
+    "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
     "core-js": "^3.6.5",
+    "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
     "register-service-worker": "^1.7.1",
     "uikit": "^3.5.7",
     "vue": "^3.0.0-0",
