--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
-    "postinstall": "echo \"Patching vue-apollo\" && node scripts/vue-apollo-patch.js"
+    "postinstall": "echo \"Patching vue-apollo\" && node scripts/vue-apollo-patch.js",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@vue/apollo-composable": "^4.0.0-alpha.10",
@@ -27,6 +28,10 @@
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "1.17.10",
+    "@graphql-codegen/typescript": "1.17.10",
+    "@graphql-codegen/typescript-operations": "1.17.8",
+    "@graphql-codegen/typescript-vue-apollo": "^2.1.0",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
@@ -43,6 +48,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^2.0.0-0",
+    "apollo-codegen": "^0.20.2",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
@@ -90,6 +96,9 @@
       }
     ]
   },
+  "eslintIgnore": [
+    "src/generated/**"
+  ],
   "browserslist": [
     "> 1%",
     "last 2 versions",
