--- a/api/Gemfile
+++ b/api/Gemfile
@@ -29,6 +29,7 @@ group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: %i[mri mingw x64_mingw]
   gem 'dotenv-rails'
+  gem 'faker', '~> 2.14'
   gem 'rubocop', '~> 0.89.1', require: false
 end
 
