--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "streetsidesoftware.code-spell-checker",
     "rebornix.Ruby",
     "dbaeumer.vscode-eslint",
-    "octref.vetur"
+    "octref.vetur",
+    "kumar-harsh.graphql-for-vscode"
   ]
 }
