--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "register-service-worker": "^1.7.1",
     "uikit": "^3.5.7",
     "vue": "^3.0.0-0",
+    "vue-draggable-next": "^1.0.8",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
