build: adjust typescript config

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,7 +2,14 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "strict": true,
+    "strict": false,
+    "noImplicitAny": false,
+    "noImplicitThis": false,
+    "alwaysStrict": true,
+    "strictBindCallApply": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": false,
+    "strictPropertyInitialization": true,
     "jsx": "preserve",
     "importHelpers": true,
     "moduleResolution": "node",
