build: install codegen package for named operations

--- a/client/codegen.yml
+++ b/client/codegen.yml
@@ -7,5 +7,6 @@ generates:
       - 'typescript'
       - 'typescript-operations'
       - 'typescript-vue-apollo'
+      - 'named-operations-object'
     config:
       vueCompositionApiImportFrom: vue
