--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.17.10",
+    "@graphql-codegen/named-operations-object": "^1.17.8",
     "@graphql-codegen/typescript": "1.17.10",
     "@graphql-codegen/typescript-operations": "1.17.8",
     "@graphql-codegen/typescript-vue-apollo": "^2.1.0",
